# smart-loan-recovery

./: .env  .env.firebase  .env.firebase.example  .gitignore  CONTAINERIZATION.md  Cargo.toml  DEVELOPMENT_CHALLENGES.md  Dockerfile  FIREBASE_AUTH_TESTING.md  METHODOLOGY_AND_ARCHITECTURE.md  PREDICTIVE_RECOVERY.md  PROJECT_PROPOSAL.md  README.md  TODO.md  fly.toml  loans.db  loans_backup.json  test.db  test_loans.db  users_backup.json
docs/: BUDGET.md  CONTAINERIZATION.md  DEVELOPMENT_CHALLENGES.md  FRONTEND_GUIDE.md  IMPLEMENTATION.md  MAINTENANCE.md  MARKET_STRATEGY.md  METHODOLOGY_AND_ARCHITECTURE.md  OBJECTIVES_TRACEABILITY.md  PROJECT_PROPOSAL.md  TESTING IMPLEMENTATION.md  diagrams-mermaid.md  project-timeline.drawio  smart-loan-recovery-diagrams.drawio
frontend/: borrowers.html  index.html  lenders.html
frontend/css/: main.css
frontend/js/: firebase-auth.js
src/: api.rs  config.rs  db.rs  error.rs  lib.rs  loan.rs  loans.db  main.rs  models.rs  recovery.rs  user.rs
src/auth/: mod.rs  models.rs
src/auth/handlers/: auth.rs  cookie.rs  google.rs  mod.rs
src/auth/middleware/: auth.rs  mod.rs  rbac.rs
src/auth/services/: firebase.rs  jwt.rs  mod.rs
src/auth/utils/: mod.rs
tests/: integration_tests.rs
