[package]
name = "smart-loan-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
actix-web = "4.9"
actix-identity = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
actix-rt = "2.10"  # For runtime
tokio = { version = "1.40", features = ["full"] }  # Async support

[dev-dependencies]
actix-web = { version = "4.9", features = ["macros"] }