[package]
name = "lendwise-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
actix-identity = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
actix-rt = "2.10"  # For runtime
tokio = { version = "1.40", features = ["full"] }  # Async support
rand = { version = "0.8.5", features = ["std"] }

# Firebase Authentication & JWT
firebase-auth = "0.4"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
actix-web = { version = "4.9", features = ["macros"] }
uuid = { version = "1.10", features = ["v4"] }
